🪟 🎨 Fix overflowing toast/notification messages (#8320)

--- a/airbyte-webapp/src/components/ui/Message/Message.module.scss
+++ b/airbyte-webapp/src/components/ui/Message/Message.module.scss
@@ -82,6 +82,7 @@ $message-icon-container-size: 32px;
 .textContainer {
   align-self: center;
   flex-grow: 1;
+  overflow-wrap: anywhere;
 }
 
 .text {
