--- a/airbyte-webapp/src/components/ui/Toast/Toast.module.scss
+++ b/airbyte-webapp/src/components/ui/Toast/Toast.module.scss
@@ -8,7 +8,6 @@
   border-width: 1px;
   border-style: solid;
   position: relative;
-  overflow: hidden;
 
   &--timeout {
     &::after {
